--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,5 +7,6 @@ requires-python = ">=3.12"
 dependencies = [
     "cachier>=4.1.0",
     "openai>=2.6.1",
+    "textual>=6.4.0",
     "tqdm>=4.67.1",
 ]
