--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "cachier>=4.1.0",
+    "numpy>=2.3.4",
     "openai>=2.6.1",
     "textual>=6.4.0",
     "tqdm>=4.67.1",
