--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,3 +19,10 @@ dependencies = [
 dev = [
     "textual-dev>=1.8.0",
 ]
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/gpt_arbiter_human_in_loop"]
