--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ dependencies = [
     "pydantic>=2.12.3",
     "tenacity>=9.1.2",
     "textual>=6.4.0",
-    "tqdm>=4.67.1",
+    "web-browser>=0.0.1",
 ]
 
 [dependency-groups]
